# seed-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  connectors.yml.example  pyproject.toml
connectors/: README.md  WRITING-CONNECTORS.md  __init__.py
connectors/base/: __init__.py  connector.py  manager.py  message.py
connectors/cli/: README.md  connector.py
connectors/discord/: README.md  connector.py
connectors/email/: README.md  connector.py
connectors/slack/: README.md  connector.py
connectors/telegram/: README.md  connector.py
connectors/webhook/: README.md  connector.py
contexts/developer/: CONSTITUTION.md  PROMPT.md  connectors.yml
contexts/lab/: CONSTITUTION.md  PROMPT.md  connectors.yml
contexts/personal/: CONSTITUTION.md  PROMPT.md  connectors.yml
contexts/startup/: CONSTITUTION.md  PROMPT.md  connectors.yml
deploy/: deploy.sh  seed
deploy/cloud/: oracle-free-tier.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: seed-agent.service.template
docs/: architecture.md  connector-deep-dive.md  evidence.md  security.md  what-to-expect.md
examples/lab-agent-seed/: README.md
examples/opspawn-evolution/: README.md
network/: PROTOCOL.md  publish.sh  query.sh
network/examples/: file-based-memory-over-databases.yaml  inotifywait-zero-cost-idle.yaml  rate-limiting-prevents-bans.yaml
seed/: CONSTITUTION.md.template  PROMPT.md.template  loop.sh
site/: index.html
tests/: test_connector_base.py  test_deploy.py  test_import_safety.py  test_integration.py  test_message.py  test_missing_deps.py  test_validate.py
(+21 files in other folders)
